# my_mold

./: CMakeLists.txt  ELFSymbol.h  README.md  arch-arm32.c  bigvector.h  cmdline.h  common.h  config.h  elf.h  elf_symbol.h  hashmap.h  input_file.c  input_file.h  input_sections.c  inputefile.c  integers.h  main.c  mapped_file.h  mold.h  mymold  new_vector.h  output-chunks.c  output-file-unix.h  output_chunks.c  output_file.h  outputfile.h  passes.c  star.md  symbol.h  thunks.c  解读mold.md
include/: cmdline.h  common.h  elf_symbol.h  filetype.h  hashmap.h  input_file.h  mapped_file.h  mold.h  output-file-unix.h  output_file.h  symbol.h
src/: arch_arm32.c  input_file.c  input_sections.c  output_chunks.c  passes.c  thunks.c
test/: a.c  b.c  main  main.c  main.s
test_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  a.c  a.h  ab  b.c  cmake_install.cmake  mymold  test  test.c  test1.c  test2  test2.c  test3.c  test4.c  vector.h
test_demo/demo/: .mold-hoL0Fv  .mold-k1DFYx  main
test_demo/test/: BigVector.h  test3  test4  vector.c
test_demo/tt1/: test  test.c
test_demo/tt2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mymold  test.c
test_demo/tt3/: .mold-0bDVPn  .mold-2AXYpy  .mold-5Qz9MK  .mold-8tlzWL  .mold-9jizzi  .mold-EifIZH  .mold-JEggja  .mold-VbDH3Q  .mold-XM3b0R  .mold-drTvSk  .mold-eBp7gz  .mold-ikauCw  .mold-jqjt4p  .mold-mU85CQ  .mold-q6pRs7  .mold-yycY6U
test_demo/tt4/: test  test.c  test1  test1.c  test2  test2.c  test3.c  test4.c  test5  test5.c
